--- a/Dalang-Backend/kakaomap/templates/kakaomap/kakaomap.html
+++ b/Dalang-Backend/kakaomap/templates/kakaomap/kakaomap.html
@@ -274,7 +274,10 @@ function displayInfowindow(marker, title) {
     infowindow.setContent(content);
     infowindow.open(map, marker);
 
-    // 인포윈도우가 표시될 때 지도의 중심을 마커 위치로 설정합니다
+    // 지도의 확대 레벨을 5로 고정합니다 - seokzzoo
+    map.setLevel(5);
+
+    // 인포윈도우가 표시될 때 지도의 중심을 마커 위치로 설정합니다 - seokzzoo
     map.setCenter(marker.getPosition());
 }
 
